<resources>
    <string name="app_name">SettingsChanger</string>
    <string name="main">Change Your Settings</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_delete">Delete All</string>

    <string name="add_settings_change">Add a Settings Change</string>

    <string name="footer">Add a Settings Change</string>

    <string name="submit">Submit</string>

    <string name="bluetooth_label">BlueTooth: </string>

    <string name="wifi_label">Wifi: </string>

    <string name="day_of_week_label">Days Of The Week: </string>

    <string name="start_time_label">Start Time: </string>
    <string name="end_time_label">End Time: </string>

    <string name="set_day_of_week_button">Set Days</string>

    <string name="set_start_time_button">Set Start Time</string>
    <string name="set_end_time_button">Set End Time</string>

    <string name="days_default">No Days Selected</string>
    <string name="start_default">No Time Selected</string>
    <string name="end_default">No Time Selected</string>

    <string name="no_day">No Day Selected</string>

    <string name="to">to</string>
    <string name="delete">Delete</string>

    <string name="volume_label">Volume</string>

    <!--
    <string-array name="days_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    -->
    <string name="Sunday">Sunday</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>

    <string name="day_of_week_prompt">Choose the Day of the Week</string>

</resources>
