<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_alignParentLeft="true"
            android:id="@+id/volume_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volume_label"
            android:textSize="20sp"/>
        
        <SeekBar
            android:layout_centerHorizontal="true"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/volume_bar"/>


        
        
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/wifi_rel_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"

        >

        <TextView
            android:layout_alignParentLeft="true"
            android:id="@+id/wifi_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_label"
            android:textSize="20sp"/>

        <CheckBox
            android:layout_alignParentRight="true"
            android:id="@+id/wifiCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bluetooth_rel_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >

        <TextView
            android:layout_alignParentLeft="true"
            android:id="@+id/bluetooth_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_label"
            android:textSize="20sp"/>

        <CheckBox
            android:layout_alignParentRight="true"
            android:id="@+id/bluetoothCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>



    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" android:padding="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Airplane Mode"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/airplaneCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" android:padding="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Location Settings"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/locationCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/day_of_week_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_of_week_label"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/day_of_week_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_day_of_week_button"
            android:layout_centerInParent="true"
            />

        <TextView
            android:id="@+id/day_of_week_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/days_default"
            android:textSize="20sp"/>



    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" android:padding="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time_label"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/start_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/set_start_time_button"/>

        <TextView
            android:id="@+id/start_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/start_default"
            android:textSize="20sp"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" android:padding="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time_label"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/end_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/set_end_time_button"/>

        <TextView
            android:id="@+id/end_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/end_default"
            android:textSize="20sp"/>


    </RelativeLayout>


    <Button
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>

</LinearLayout>