<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:padding="10dp"
        android:id="@+id/sunRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_alignParentLeft="true"
            android:id="@+id/sundayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sunday"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/sundayCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:padding="10dp"
        android:id="@+id/monRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <TextView
            android:layout_alignParentLeft="true"
            android:id="@+id/mondayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Monday"
            android:textSize="20sp"/>

        <CheckBox
            android:layout_alignParentRight="true"
            android:id="@+id/mondayCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:padding="10dp"
        android:id="@+id/tuesRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <TextView
            android:layout_alignParentLeft="true"
            android:id="@+id/tuesdayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tuesday"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/tuesdayCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:padding="10dp"
        android:id="@+id/wedRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_alignParentLeft="true"
            android:id="@+id/wednesdayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Wednesday"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/wednesdayCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:padding="10dp"
        android:id="@+id/thursRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_alignParentLeft="true"
            android:id="@+id/thursdayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Thursday"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/thursdayCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:padding="10dp"
        android:id="@+id/friRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_alignParentLeft="true"
            android:id="@+id/fridayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Friday"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/fridayCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:padding="10dp"
        android:id="@+id/satRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_alignParentLeft="true"
            android:id="@+id/saturdayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Saturday"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/saturdayCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <Button
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>

</LinearLayout>